# mRICH2

./: .gitignore  CMakeLists.txt  README  README.md  mRICH_geometryLogicalVolumes.txt  mRICHdimension.txt  mrich2.cc  run1.mac  vis.mac
include/: mRichActionInitialization.hh  mRichDetectorConstruction.hh  mRichParameters.h  mRichPhysicsListMessenger.hh  mRichRunAction.hh  mRichSteppingAction.hh
macros/CVS/: Root
src/: UltraFresnelLens.cc  mRichActionInitialization.cc  mRichAgelTrackingAction.cc  mRichDetectorConstruction.cc  mRichMaterial.cc  mRichParameters.cc  mRichPhysicsListMessenger.cc  mRichPrimaryGeneratorAction.cc  mRichRunAction.cc  mRichSteppingAction.cc
